--- a/about.html
+++ b/about.html
@@ -129,7 +129,7 @@
         <h2>Meet Our Team</h2>
         <div class="team-container">
             <div class="team-member">
-                <img src="team1.jpg" alt="Team Member 1">
+                <img src="Eboni Y Browne.jpeg" alt="Team Member 1">
                 <h4>Dr. John Smith</h4>
                 <p>Cardiologist</p>
             </div>
