--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
     <header>
         <div>Better Health</div>
         <nav>
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="appointment.html">Appointment</a>
             <a href="consultation.html">Consultation</a>
             <a href="about.html">About Us</a>
