--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             text-decoration: underline;
         }
         .landing-page {
-            background-image: url('BK.PNG');
+            background-image: url('Appointment.jpg');
             background-size: cover;
             background-position: center;
             color: white;
