--- a/consultation.html
+++ b/consultation.html
@@ -28,7 +28,7 @@
             text-decoration: underline;
         }
         .landing-page {
-            background-image: url('consultation.PNG');
+            background-image: url('consultation.png');
             background-size: cover;
             background-position: center;
             color: white;
