--- a/about.html
+++ b/about.html
@@ -134,22 +134,22 @@
                 <p>Cardiologist</p>
             </div>
             <div class="team-member">
-                <img src="team2.jpg" alt="Team Member 2">
+                <img src=" Memunatu Jalloh.jpeg" alt="Team Member 2">
                 <h4>Memunatu Jalloh</h4>
                 <p>Pediatrician</p>
             </div>
             <div class="team-member">
-                <img src="team3.jpg" alt="Team Member 3">
+                <img src="Memunatu Kamara.jpeg" alt="Team Member 3">
                 <h4>Memunatu B Kamara</h4>
                 <p>General Practitioner</p>
             </div>
             <div class="team-member">
-                <img src="team4.jpg" alt="Team Member 4">
+                <img src="Binta.jpeg" alt="Team Member 4">
                 <h4>Bintu S keita</h4>
                 <p>Orthopedic Specialist</p>
             </div>
             <div class="team-member">
-                <img src="team5.jpg" alt="Team Member 5">
+                <img src="Suma.jpeg" alt="Team Member 5">
                 <h4> Ejatu Bella Suma</h4>
                 <p>Neurologist</p>
             </div>
