--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
             <a href="Appointment.html">Appointment</a>
             <a href="consultation.html">Consultation</a>
             <a href="about.html">About Us</a>
-            <a href="signup.html">Sign Up</a>
-            <a href="login.html">Log In</a>
+            <a href="signin.html">Sign Up</a>
+            <a href="signup.html">Log In</a>
         </nav>
     </header>
 
