--- a/about.html
+++ b/about.html
@@ -28,12 +28,12 @@
             text-decoration: underline;
         }
         .landing-page {
-            background-image: url('about-background.jpg');
+            background-image: url('about.png');
             background-size: cover;
             background-position: center;
             color: white;
             text-align: center;
-            padding: 100px 20px;
+            padding: 250px 20px;
         }
         .section {
             padding: 50px 20px;
@@ -115,7 +115,7 @@
     <section class="section">
         <h2 style="text-align: center;">Our Story</h2>
         <div class="our-story">
-            <img src="story-image.jpg" alt="Our Story">
+            <img src="Story.png" alt="Our Story">
             <div class="our-story-text">
                 <p>
                     Better Health was founded with a mission to connect individuals with trusted medical professionals and health services. 
