--- a/about.html
+++ b/about.html
@@ -139,7 +139,7 @@
                 <p>Pediatrician</p>
             </div>
             <div class="team-member">
-                <img src="Memunatu Kamara.jpeg" alt="Team Member 3">
+                <img src="Memumatu Kamara.jpeg" alt="Team Member 3">
                 <h4>Memunatu B Kamara</h4>
                 <p>General Practitioner</p>
             </div>
