--- a/about.html
+++ b/about.html
@@ -131,27 +131,27 @@
             <div class="team-member">
                 <img src="Eboni Y Browne.jpeg" alt="Team Member 1">
                 <h4>Eboni Y Browne </h4>
-                <p>Cardiologist</p>
+                <p>Founder</p>
             </div>
             <div class="team-member">
                 <img src=" Memunatu Jalloh.jpeg" alt="Team Member 2">
                 <h4>Memunatu Jalloh</h4>
-                <p>Pediatrician</p>
+                <p>CEOp>
             </div>
             <div class="team-member">
                 <img src="Memumatu Kamara.jpeg" alt="Team Member 3">
                 <h4>Memunatu B Kamara</h4>
-                <p>General Practitioner</p>
+                <p>Maketing Manager</p>
             </div>
             <div class="team-member">
                 <img src="Binta.jpeg" alt="Team Member 4">
                 <h4>Bintu S keita</h4>
-                <p>Orthopedic Specialist</p>
+                <p>Finance Manager</p>
             </div>
             <div class="team-member">
                 <img src="Suma.jpeg" alt="Team Member 5">
                 <h4> Ejatu Bella Suma</h4>
-                <p>Neurologist</p>
+                <p>Operations manager</p>
             </div>
         </div>
     </section>
