--- a/about.html
+++ b/about.html
@@ -139,7 +139,7 @@
                 <p>CEOp>
             </div>
             <div class="team-member">
-                <img src="Memumatu Kamara.jpeg" alt="Team Member 3">
+                <img src="Menumatu Kamara.jpeg" alt="Team Member 3">
                 <h4>Memunatu B Kamara</h4>
                 <p>Maketing Manager</p>
             </div>
