--- a/about.html
+++ b/about.html
@@ -129,22 +129,22 @@
         <h2>Meet Our Team</h2>
         <div class="team-container">
             <div class="team-member">
-                <img src="Eboni Y Browne.jpeg" alt="Team Member 1">
+                <img src="Eboni Y Browne.png" alt="Team Member 1">
                 <h4>Eboni Y Browne </h4>
                 <p>Founder</p>
             </div>
             <div class="team-member">
-                <img src=" Memunatu Jalloh.jpeg" alt="Team Member 2">
+                <img src=" Memunatu Jalloh.png" alt="Team Member 2">
                 <h4>Memunatu Jalloh</h4>
                 <p>CEOp>
             </div>
             <div class="team-member">
-                <img src="Menumatu Kamara.jpeg" alt="Team Member 3">
+                <img src="Menumatu Kamara.png" alt="Team Member 3">
                 <h4>Memunatu B Kamara</h4>
                 <p>Maketing Manager</p>
             </div>
             <div class="team-member">
-                <img src="Binta.jpeg" alt="Team Member 4">
+                <img src="Binta.png" alt="Team Member 4">
                 <h4>Bintu S keita</h4>
                 <p>Finance Manager</p>
             </div>
