--- a/about.html
+++ b/about.html
@@ -136,7 +136,7 @@
             <div class="team-member">
                 <img src=" Memunatu Jalloh.png" alt="Team Member 2">
                 <h4>Memunatu Jalloh</h4>
-                <p>CEOp>
+                <p>CEO </p>
             </div>
             <div class="team-member">
                 <img src="Menumatu Kamara.png" alt="Team Member 3">
